--- a/cakes.css
+++ b/cakes.css
@@ -23,6 +23,7 @@ body{
     background-color: #fbebea;
     margin: 0;
     padding: 0;
+    overflow-x:hidden;
   }
   .logo{
       font-family: Playfair Display;
